--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script type="text/javascript" src="build/index.js"></script>
+    <script type="text/javascript" src="build/bundle.js"></script>
   </body>
 </html>
