--- a/gravity.html
+++ b/gravity.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script type="text/javascript" src="build/index.js"></script>
+    <script type="text/javascript" src="build/gravity.js"></script>
   </body>
 </html>
