major cleanup project structure

--- a/demo/html/keyboard.html
+++ b/demo/html/keyboard.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script type="text/javascript" src="build/circularmotion.js"></script>
+    <script type="text/javascript" src="../build/keyboard.js"></script>
   </body>
 </html>
