--- a/demo/html/wave.html
+++ b/demo/html/wave.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script type="text/javascript" src="build/gravity.js"></script>
+    <script type="text/javascript" src="../build/sinwave.js"></script>
   </body>
 </html>
