--- a/demo/html/bounce.html
+++ b/demo/html/bounce.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script type="text/javascript" src="build/keyboard.js"></script>
+    <script type="text/javascript" src="../build/bounce.js"></script>
   </body>
 </html>
