--- a/demo/html/index.html
+++ b/demo/html/index.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script type="text/javascript" src="build/bounce.js"></script>
+    <script type="text/javascript" src="../build/index.js"></script>
   </body>
 </html>
